--- a/style.css
+++ b/style.css
@@ -1,28 +1,69 @@
 * {
-	padding: 4px;
+	margin:0;
+    padding: 0;
+    font-family: "Lucida Grande", Lucida, sans-serif;
+    color: #444;
 }
 
-html, body {
-	padding: 0 10px 10px;
+body {
+	padding:20px;
+    background:#F2F2F2;
+    font-size: 14px;
 }
 
-input[type=text] {
+p {
+    padding: 0 10px 20px;
+    line-height: 180%;
+}
+
+section {
+    -moz-border-radius: 12px;
+    -webkit-border-radius: 12px;
+    background:#FFF;
+    padding: 15px 10px 10px;
+    max-width: 500px;
+}
+
+textarea {
+    width: 90%;
+}
+
+input, textarea {
+    font-size: 14px;
 	border: #CCC solid 1px;
+    padding:5px;
+    background: white;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-box-shadow: inset 0 0 5px #EEE;
+    -webkit-box-shadow: inset 0 0 5px #EEE;
+    box-shadow: inset 0 0 5px #EEE;
+    color: #666;
 }
 
 .jquery_form_error_message {
-	margin:8px 0;
+	margin:5px 0 20px;
+    padding: 10px;
 	background: pink;
+    -moz-border-radius: 12px;
+    -webkit-border-radius: 12px;
 }
 
 .error {
-	background: pink;
+    background: pink;
 }
 
-#maxlength {
-	background: #CCC;
+span.chars_left {
+	background: #f2f2f2;
+    padding: 0 2px;
+    font-weight: normal;
+    font-size: 90%;
+    color: #666;
 }
 
 em {
-	background:lightyellow;
+	background: lightyellow;
+    font-size: 90%;
+    color: #81815c;
+    padding:0 1px;
 }
