--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ input[type=submit] {
     background: pink;
 }
 
-span.chars_left
+span.chars_left,
 span.jquery_form_error_message {
     background: #f2f2f2;
     padding: 0 2px;
